--- a/.github/workflows/web_project_backend_deployment.yml
+++ b/.github/workflows/web_project_backend_deployment.yml
@@ -52,7 +52,7 @@ jobs:
       uses: einaregilsson/beanstalk-deploy@v18
       with:
         aws_access_key: ${{secrets.AWS_ACCESS_KEY_ID}}
-        aws_secret_key: ${{secrets.AWSACCESS_KEY_SECRET}}
+        aws_secret_key: ${{secrets.AWS_ACCESS_KEY_SECRET}}
         application_name: tutorials
         environment_name: Tutorials-env
         region: ap-southeast-1
