--- a/.github/workflows/web_project_backend_deployment.yml
+++ b/.github/workflows/web_project_backend_deployment.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: elastic.beanstalk.dev CD
+name: elastic.beanstalk.prod CD
 
 on:
   push:
@@ -25,13 +25,26 @@ jobs:
         node-version: ${{ matrix.node-version }}
 #         cache: 'npm'
     
-    - name: Installing NPM
+    - run: cd frontend
+
+    - name: Installing NPM in the frontend
       run: npm install
       
     - run: npm ci
 
+    - name: build a react app
+      run: npm run build
+
+    - run: mv dist ../backend/dist
+
+    - run: cd ../backenk
 #     - run: npm run build --if-present     To be done once you have a test suite ready
     
+    - name: Installing NPM in the backend
+      run: npm install
+      
+    - run: npm ci
+
     - name: Generate deployment package
       run: zip -r deploy.zip * -x "**node_modules**"
       
