--- a/.github/workflows/web_project_backend_deployment.yml
+++ b/.github/workflows/web_project_backend_deployment.yml
@@ -19,6 +19,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
@@ -37,7 +38,7 @@ jobs:
 
     - run: mv dist ../backend/dist
 
-    - run: cd ../backenk
+    - run: cd ../backend
 #     - run: npm run build --if-present     To be done once you have a test suite ready
     
     - name: Installing NPM in the backend
