--- a/.github/workflows/web_project_backend_deployment.yml
+++ b/.github/workflows/web_project_backend_deployment.yml
@@ -23,7 +23,6 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-#         cache: 'npm'
     
     - run: cd frontend
 
@@ -31,6 +30,9 @@ jobs:
       run: npm install
       
     - run: npm ci
+
+    - name: list available scripts for npm
+      run: npm run
 
     - name: build a react app
       run: npm run build
