fix: test github actions

--- a/.github/workflows/web_project_backend_deployment.yml
+++ b/.github/workflows/web_project_backend_deployment.yml
@@ -19,9 +19,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     
-    - run: cd frontend
-
     - run: pwd
+
+    - run: ls
 
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
