--- a/.github/workflows/web_project_backend_deployment.yml
+++ b/.github/workflows/web_project_backend_deployment.yml
@@ -23,6 +23,10 @@ jobs:
 
     - run: ls
 
+    - run: cd frontend
+
+    - run: ls
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
