--- a/.github/workflows/web_project_backend_deployment.yml
+++ b/.github/workflows/web_project_backend_deployment.yml
@@ -19,11 +19,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     
-    - run: pwd
-
-    - run: ls
-
-    - run: cd ./frontend
+    - run: |
+        pwd
+        ls
+        cd ./frontend
+        ls
 
     - run: pwd
 
