fix: add env variable to github actions scripts

--- a/.github/workflows/web_project_backend_deployment.yml
+++ b/.github/workflows/web_project_backend_deployment.yml
@@ -6,6 +6,9 @@ name: elastic.beanstalk.prod CD
 on:
   push:
     branches: [ master ]
+
+env:
+  NODE_ENV: prod
     
 jobs:
   build:
@@ -23,6 +26,8 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
+
+    - run: echo $NODE_ENV
 
     - name: Installing NPM in the frontend
       working-directory: ./frontend
