--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack serve",
-    "build": "set NODE_ENV=prod && webpack --config webpack.config.js --mode=production",
+    "build": "webpack --config webpack.config.js --mode=production",
     "build-serve": "set NODE_ENV=dev && webpack --config webpack.config.js --mode=development && cd ../backend && nodemon app.js"
   },
   "author": "Elijah",
