--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "@babel/runtime": "^7.17.2",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@material-ui/styles": "^4.11.5",
     "@mui/icons-material": "^5.4.1",
     "@mui/material": "^5.4.1",
     "moment": "^2.29.4",
