--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack serve",
     "build": "npx webpack-cli build --config=webpack.config.js --mode=production --node-env=production",
-    "build-serve": "set NODE_ENV=dev && npx webpack-cli --config=webpack.config.js --mode=development --node-env=development && cd ../backend && nodemon app.js"
+    "build-serve": "set NODE_ENV=dev && npx webpack-cli --config=./webpack.config.js --mode=development --node-env=development && cd ../backend && nodemon app.js"
   },
   "author": "Elijah",
   "license": "ISC",
