--- a/.github/workflows/web_project_backend_deployment.yml
+++ b/.github/workflows/web_project_backend_deployment.yml
@@ -29,6 +29,8 @@ jobs:
 
       - run: echo $NODE_ENV
 
+      - run: echo $APP_VERSION
+
       - name: Installing NPM in the frontend
         working-directory: ./frontend
         run: npm install
@@ -73,7 +75,7 @@ jobs:
           flags: "g"
 
       - name: Run shell script to build the docker images
-        run: ./backend/docker-deployment.sh $APP_VERSION ${{secrets.ECR_PASSWARD}}
+        run: sudo ./backend/docker-deployment.sh $APP_VERSION ${{secrets.ECR_PASSWARD}}
 
       - name: Beanstalk Deploy web app
         uses: einaregilsson/beanstalk-deploy@v18
